   - Xml::buildTable() – use OOUI or Codex widgets instead
   - Xml::buildTableRow() – use OOUI or Codex widgets instead
   - Xml::textarea() – use Html::element() instead
   - Xml::submitButton() – use Html::submitButton() instead
   - Xml::check() – use Html::check() instead
* BlockUtils and BlockUtilsFactory is now deprecated. Use BlockTargetFactory
  and CrossWikiBlockTargetFactory.
* RenameuserSQL::rename has been deprecated and should be replaced with
  RenameuserSQL::renameUser, which returns a Status instead of boolean.
* LocalFile::getQueryInfo() and OldLocalFile::getQueryInfo(), deprecated
  since 1.41, are now emitting warnings.
* RevisionStore::newNullRevision is deprecated, use
  PageUpdater::saveDummyRevision() instead.
* Linker::userLink() has been deprecated in favor of the UserLinkRenderer
  service. (T308000)
* OutputPage::getNoGallery(), previously marked @internal, has been deprecated
  and should be replaced with
  `OutputPage::getOutputFlag(ParserOutputFlags::NO_GALLERY)`
* OutputPage::showNewSectionLink() has been deprecated and should be replaced
  with `OutputPage::getOutputFlag(ParserOutputFlags::NEW_SECTION)`
* OutputPage::forceHideNewSectionLink() has been deprecated and should be
  replaced with `OutputPage::getOutputFlag(ParserOutputFlags::HIDE_NEW_SECTION)`
* OutputPage::{get,set}RevisionTimestamp() has been deprecated and should be
  replaced with `OutputPage::getMetadata()->{get,set}RevisionTimestamp()`
* The 'PermissionErrorAudit' hook has been deprecated and replaced by
  the 'PermissionStatusAudit' hook.
* The 'PageContentSave' hook, deprecated in 1.35, now emits deprecation warnings
  when used. Use the 'MultiContentSave' hook instead.
* DifferenceEngine::getPermissionErrors() is deprecated,
  use DifferenceEngine::authorizeView() instead.
* UploadBase::verifyPermissions() and UploadBase::verifyTitlePermissions()
  are now deprecated. Use UploadBase::authorizeUpload() instead.