@@ -76,8 +76,7 @@ abstract class AbstractBlock implements Block {
 	 *
 	 * @param array $options Parameters of the block, with supported options:
 	 *  - target: (BlockTarget) The target object (since 1.44)
-	 *  - address: (string|UserIdentity) Target user name, user identity object,
-	 *     IP address or IP range.
+	 *  - address: (string|UserIdentity) Deprecated since 1.44, use 'target'.
 	 *  - wiki: (string|false) The wiki the block has been issued in,
 	 *    self::LOCAL for the local wiki (since 1.38)
 	 *  - reason: (string|Message|CommentStoreComment) Reason for the block
@@ -107,6 +106,9 @@ abstract class AbstractBlock implements Block {
 			}
 			$this->setTarget( $options['target'] );
 		} elseif ( isset( $options['address'] ) ) {
+			wfDeprecatedMsg(
+				'The address parameter to AbstractBlock::__construct is deprecated since 1.44',
+				'1.44' );
 			$this->setTarget( $options['address'] );
 		} else {
 			$this->setTarget( null );
@@ -407,7 +409,8 @@ abstract class AbstractBlock implements Block {
 
 	/**
 	 * Set the target for this block
-	 * @param BlockTarget|string|UserIdentity|null $target
+	 * @param BlockTarget|string|UserIdentity|null $target Passing UserIdentity|string is deprecated
+	 *   since 1.44. Set the target by passing BlockTarget|null.
 	 */
 	public function setTarget( $target ) {
 		// Small optimization to make this code testable, this is what would happen anyway
@@ -417,6 +420,10 @@ abstract class AbstractBlock implements Block {
 			$this->assertWiki( $target->getWikiId() );
 			$this->target = $target;
 		} else {
+			wfDeprecatedMsg(
+				'Passing UserIdentity|string to AbstractBlock::setTarget is deprecated since 1.44',
+				'1.44'
+			);
 			$parsedTarget = MediaWikiServices::getInstance()
 				->getCrossWikiBlockTargetFactory()
 				->getFactory( $this->wikiId )
