@@ -272,7 +272,8 @@ class DatabaseBlockTest extends MediaWikiLangTestCase {
 			'sitewide' => true,
 		] );
 
-		$block->setTarget( new UserIdentityValue( $user->getId(), $user->getName() ) );
+		$block->setTarget(
+			new UserBlockTarget( new UserIdentityValue( $user->getId(), $user->getName() ) ) );
 		$block->setBlocker( $this->getTestSysop()->getUser() );
 
 		$blockStore = $this->getServiceContainer()->getDatabaseBlockStore();
@@ -299,7 +300,7 @@ class DatabaseBlockTest extends MediaWikiLangTestCase {
 			'sitewide' => false,
 		] );
 
-		$block->setTarget( $user );
+		$block->setTarget( new UserBlockTarget( $user ) );
 		$block->setBlocker( $this->getTestSysop()->getUser() );
 
 		$blockStore = $this->getServiceContainer()->getDatabaseBlockStore();
@@ -331,7 +332,7 @@ class DatabaseBlockTest extends MediaWikiLangTestCase {
 			'sitewide' => true,
 		] );
 
-		$block->setTarget( $user );
+		$block->setTarget( new UserBlockTarget( $user ) );
 		$block->setBlocker( $this->getTestSysop()->getUser() );
 
 		$blockStore = $this->getServiceContainer()->getDatabaseBlockStore();
@@ -356,7 +357,7 @@ class DatabaseBlockTest extends MediaWikiLangTestCase {
 			'sitewide' => false,
 		] );
 
-		$block->setTarget( $user );
+		$block->setTarget( new UserBlockTarget( $user ) );
 		$block->setBlocker( $this->getTestSysop()->getUser() );
 
 		$blockStore = $this->getServiceContainer()->getDatabaseBlockStore();
@@ -385,7 +386,7 @@ class DatabaseBlockTest extends MediaWikiLangTestCase {
 			'sitewide' => false,
 		] );
 
-		$block->setTarget( $user );
+		$block->setTarget( new UserBlockTarget( $user ) );
 		$block->setBlocker( $this->getTestSysop()->getUser() );
 
 		$blockStore = $this->getServiceContainer()->getDatabaseBlockStore();
